# QtDynamicStyleSheetCreator

./: .gitignore  README.md  pyproject.toml
qt_dynamic_stylesheet_creator/: __main__.py  jinja_methods.py  material_dark.json  material_light.json
